--- a/Info.plist
+++ b/Info.plist
@@ -8,10 +8,8 @@
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.gmshake.nke.${PRODUCT_NAME:identifier}</string>
+	<string>org.gmshake.nke.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -19,17 +17,15 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.1.0d1</string>
+	<string>${MODULE_VERSION}</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.kpi.bsd</key>
-		<string>8.0.0b1</string>
+		<string>8.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>8.0.0b1</string>
+		<string>8.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>8.0.0b1</string>
-		<key>com.apple.kpi.unsupported</key>
-		<string>8.0.0b1</string>
+		<string>8.0.0</string>
 	</dict>
 </dict>
 </plist>
